[package]
name = "validation"
version = "0.1.0"
edition = "2021"

[lib]
name = "rvalidate_extension"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
mac_address = "1.1.7"
rand = "0.8.5"
md5 = "0.7.0"
rsa = "0.9.6"
base64 = "0.22.1"
once_cell = "1.19.0"
pem = "3.0.4"
